Fix logo alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -143,7 +143,7 @@ dl.flat dt {
   top: 0;
   font-size: 20px;
   line-height: 20px;
-  padding: 11px 15px;
+  padding: 14px 15px;
   color: inherit;
   z-index: 101;
 }
